src/ts/tests/fixtures/invalid_include_tree/nonself_reference.cloesce.ts
// @ts-nocheck
// InvalidDataSourceDefinition

@D1
export class Bar {
  @PrimaryKey
  id: number;
}

@D1
export class Foo {
  @PrimaryKey
  id: number;

  @DataSource
  static readonly default: IncludeTree<Bar> = {};
}
